# storage-manager

./: .gitignore  README.md  pyproject.toml
storage_manager/: __init__.py  cli.py
storage_manager/commands/: large_files.py  node_modules.py  screenshots.py
storage_manager/utils/: size_utils.py  visualization.py
